# openkb

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  SECURITY.md  UPGRADE.md  docker-compose.yml  pyproject.toml
.github/: GOOD_FIRST_ISSUES.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
agent/: PATCH_FORMAT.md  PATCH_FORMAT.zh-CN.md  install-state.json  manifest.yaml
agent/patches/: openkb-onboarding.v1.md  openkb-onboarding.v1.zh-CN.md
docs/: DEMO.md  DEPLOYMENT.md  DEPLOYMENT.zh-CN.md  PUBLISHING.md  RELEASE_v1.0.0.md  WHY_OPENKB.md  WHY_OPENKB.zh-CN.md
docs/assets/demo/: README.md
docs/deploy/: nginx-basic-auth.md
docs/superpowers/plans/: 2026-05-20-openkb.md
docs/superpowers/specs/: 2026-05-20-openkb-design.md
scripts/: openkb.cmd  openkb.ps1  setup-openkb-env.ps1
server/src/openkb/: agent_patch_service.py  config.py  doc_service.py  errors.py  markdown_io.py  models.py  path_utils.py  project_resolver.py  project_service.py  project_templates.py  roadmap_service.py  session_service.py  state_service.py  task_service.py  watch_service.py
site/: index.html
skill/openkb-sync/: SKILL.md  SKILL.zh-CN.md
tests/: conftest.py  test_agent_patch.py  test_api.py  test_cli.py  test_cli_console.py  test_config.py  test_doc_hub_integration.py  test_doc_service.py  test_markdown_io.py  test_models.py  test_path_utils.py  test_project_resolver.py  test_project_service.py  test_project_templates.py  test_roadmap_service.py  test_state_service.py  test_task_service.py
tests/fixtures/: sample_task.md
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
web/e2e/: demo-capture.spec.ts  global-setup.ts  global-teardown.ts  hub.spec.ts  polish.spec.ts
web/src/: App.tsx  main.tsx
(+161 files in other folders)
