[project]
name = "openkb"
version = "1.1.0"
description = "Centralized Agent Kanban platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "typer[all]>=0.15.0",
  "pyyaml>=6.0.2",
  "python-frontmatter>=1.1.0",
  "pydantic>=2.10.0",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0"]

[project.scripts]
openkb = "openkb.cli.main:app"

[project.urls]
Homepage = "https://godiao.github.io/openkb/"
Repository = "https://github.com/GoDiao/openkb"
Documentation = "https://github.com/GoDiao/openkb/blob/master/README.md"
Changelog = "https://github.com/GoDiao/openkb/blob/master/CHANGELOG.md"
Issues = "https://github.com/GoDiao/openkb/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server/src/openkb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["server/src"]

[tool.uv]
# Prefer UV_CACHE_DIR env; default cache is .uv-cache under OPENKB_ROOT
